@@ -1,3 +1,6 @@
+2010-01-17 gabriel
+* Add CachingMethod to extract all subjects from all objects in Web Page Module
+
 2010-01-10 gabriel
 * Add gadget view on UNG template and added script to add a gadget
 
